--- a/views/login.html
+++ b/views/login.html
@@ -52,8 +52,13 @@
             </div>
             <div>
                 <label for="password">Contraseña</label>
-                <input type="password" name="password">
+                <input type="password" name="password" placeholder="Contraseña" required>
             </div>
+
+            <div>
+                <button type="submit">Acceder</button>
+            </div>
+
             <div>
                 <button><a href="home">Volver a la página principal</a></button>
             </div>
