--- a/views/register.html
+++ b/views/register.html
@@ -66,23 +66,23 @@
       </div>
       <div>
         <label>¿Qué te interesa?</label>
-        <input name="interes" type="checkbox" required>Electrónica
-        <input name="interes" type="checkbox" required>Moda
-        <input name="interes" type="checkbox" required>Hogar
-        <input name="interes" type="checkbox" required>Juguetería
-        <input name="interes" type="checkbox" required>Vida sana
+        <input name="interes" type="checkbox">Electrónica
+        <input name="interes" type="checkbox">Moda
+        <input name="interes" type="checkbox">Hogar
+        <input name="interes" type="checkbox">Juguetería
+        <input name="interes" type="checkbox">Vida sana
       </div>
       <div>
         <label for="fotoPerfil">Foto de perfil</label>
-        <input type="file" name="fotoPerfil">
+        <input type="file" name="fotoPerfil" accept=".jpg, .png">
       </div>
       <div>
         <label for="password">Contraseña</label>
-        <input type="password" name="password">
+        <input type="password" name="password" placeholder="Contraseña"  required>
       </div>
       <div>
         <label for="verifyPassword">Verificar contraseña</label>
-        <input type="password" name="verifyPassword">
+        <input type="password" name="verifyPassword" placeholder="Verifique su contraseña" required>
       </div>
       <div>
         <button><a href="home">Volver a la página principal</a></button>
