--- a/views/login.html
+++ b/views/login.html
@@ -16,10 +16,9 @@
         <section class="logoBusquedaParrafo">
             <section class="logoBusqueda">
                 <img id="logo" src="./images/logo-mercado-liebre.svg" alt="">
-
-                <p id="barraBusqueda">Busca el producto deseado <button class="botonBusqueda"><i
-                            class="fas fa-search-dollar"></i></button></p>
-            </section>
+                <form action="">
+                    <input name="buscar" type="text" placeholder="Busca el producto deseado"><button class="botonBusqueda" type="submit"><i class="fas fa-search-dollar"></i></button> 
+                  </form>
             <p><i class="fas fa-money-bill"></i>Compra en cuotas y sin tarjeta de crédito</p>
         </section>
 
