last exercise done

--- a/views/home.html
+++ b/views/home.html
@@ -13,16 +13,17 @@
 
 <body>
   <header>
-    <section class ="logoBusquedaParrafo">
-    <section class="logoBusqueda">
-    <img id="logo" src="./images/logo-mercado-liebre.svg" alt="">
-    <form action="">
-      <input name="buscar" type="text" placeholder="Busca el producto deseado"><button class="botonBusqueda" type="submit"><i class="fas fa-search-dollar"></i></button> 
-    </form>
+    <section class="logoBusquedaParrafo">
+      <section class="logoBusqueda">
+        <img id="logo" src="./images/logo-mercado-liebre.svg" alt="">
+        <form class ="barraBusqueda" action="">
+          <input name="buscar" type="text" placeholder="Busca el producto deseado"><button class="botonBusqueda"
+            type="submit"><i class="fas fa-search-dollar"></i></button>
+        </form>
+      </section>
+      <p class="parrafo"><i class="fas fa-money-bill"></i>Compra en cuotas y sin tarjeta de crédito</p>
     </section>
-    <p><i class="fas fa-money-bill"></i>Compra en cuotas y sin tarjeta de crédito</p>
-    </section>
-    
+
 
     <nav>
       <ul type="none">
@@ -52,52 +53,52 @@
     </section>
     <h3>Basado en tu última visita</h3>
     <section class="visita">
-      
-      <article>
+
+      <article class="producto">
         <img src="./images/img-cafetera-moulinex.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$6.770</p>
-          <p class="descuentos">40% off</p>
-        </div>
+            <p class="precio">$6.770</p>
+            <p class="descuentos">40% off</p>
+          </div>
           <h4 class="descripcion">Cafetera Moulinex</h4>
         </div>
       </article>
 
-      <article>
+      <article class="producto">
         <img src="./images/img-macbook-pro-2019.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$230.000</p>
-          <p class="descuentos">20% off</p>
+            <p class="precio">$230.000</p>
+            <p class="descuentos">20% off</p>
+          </div>
         </div>
-      </div>
-          <h4 class="descripcion">MacBook Pro 2019</h4>
+        <h4 class="descripcion">MacBook Pro 2019</h4>
         </div>
       </article>
 
-      <article>
+      <article class="producto">
         <img src="./images/img-samsung-galaxy-s10.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$70.500</p>
-          <p class="descuentos">10% off</p>
-        </div>
+            <p class="precio">$70.500</p>
+            <p class="descuentos">10% off</p>
+          </div>
           <h4 class="descripcion">Samsung Galaxy S10</h4>
         </div>
       </article>
 
-      <article>
+      <article class="producto">
         <img src="./images/img-tv-samsung-smart.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$23.200</p>
-          <p class="descuentos">5% off</p>
-        </div>
+            <p class="precio">$23.200</p>
+            <p class="descuentos">5% off</p>
+          </div>
           <h4 class="descripcion">SmartTV Samsung 43"</h4>
         </div>
       </article>
@@ -105,52 +106,52 @@
     </section>
     <h3>Sección de ofertas</h3>
     <section class="ofertas">
-    
-    
-      <article>
+
+
+      <article class="producto">
         <img src="./images/img-cafetera-moulinex.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$6.770</p>
-          <p class="descuentos">40% off</p>
-        </div>
+            <p class="precio">$6.770</p>
+            <p class="descuentos">40% off</p>
+          </div>
           <h4 class="descripcion">Cafetera Moulinex</h4>
         </div>
       </article>
 
-      <article>
+      <article class="producto">
         <img src="./images/img-macbook-pro-2019.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$230.000</p>
-          <p class="descuentos">20% off</p>
-        </div>
+            <p class="precio">$230.000</p>
+            <p class="descuentos">20% off</p>
+          </div>
           <h4 class="descripcion">MacBook Pro 2019</h4>
         </div>
       </article>
 
-      <article>
+      <article class="producto">
         <img src="./images/img-samsung-galaxy-s10.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$70.500</p>
-          <p class="descuentos">10% off</p>
-        </div>
+            <p class="precio">$70.500</p>
+            <p class="descuentos">10% off</p>
+          </div>
           <h4 class="descripcion">Samsung Galaxy S10</h4>
         </div>
       </article>
 
-      <article>
+      <article class="producto">
         <img src="./images/img-tv-samsung-smart.jpg" alt="">
         <div>
           <i class="fas fa-truck"></i>
           <div class="renglonPrecioDescuento">
-          <p class="precio">$23.200</p>
-          <p class="descuentos">5% off</p>
-        </div>
+            <p class="precio">$23.200</p>
+            <p class="descuentos">5% off</p>
+          </div>
           <h4 class="descripcion">SmartTV Samsung 43"</h4>
         </div>
       </article>
@@ -159,6 +160,7 @@
 
   </main>
   <footer>
+    <div>
     <section>
       <i class="fas fa-credit-card"></i>
       <h4>
@@ -183,7 +185,9 @@
       <p>¿No te gusta? ¡Devuélvelo! En Mercado Liebre, no hay nada que no puedas hacer,
         porque estás siempre protegid@.</p>
     </section>
-    <section>
+  </div>
+
+    <section class="copyright">
       <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </section>
   </footer>
