--- a/views/register.html
+++ b/views/register.html
@@ -13,15 +13,16 @@
 
 <body>
   <header>
-    <section class ="logoBusquedaParrafo">
+    <section class="logoBusquedaParrafo">
       <section class="logoBusqueda">
-      <img id="logo" src="./images/logo-mercado-liebre.svg" alt="">
-      <form action="">
-        <input name="buscar" type="text" placeholder="Busca el producto deseado"><button class="botonBusqueda" type="submit"><i class="fas fa-search-dollar"></i></button> 
-      </form>
+        <img id="logo" src="./images/logo-mercado-liebre.svg" alt="">
+        <form class ="barraBusqueda" action="">
+          <input name="buscar" type="text" placeholder="Busca el producto deseado"><button class="botonBusqueda"
+            type="submit"><i class="fas fa-search-dollar"></i></button>
+        </form>
       </section>
-      <p><i class="fas fa-money-bill"></i>Compra en cuotas y sin tarjeta de crédito</p>
-      </section>
+      <p class="parrafo"><i class="fas fa-money-bill"></i>Compra en cuotas y sin tarjeta de crédito</p>
+    </section>
 
 
     <nav>
@@ -95,6 +96,7 @@
 
   </main>
   <footer>
+    <div>
     <section>
       <i class="fas fa-credit-card"></i>
       <h4>
@@ -119,10 +121,14 @@
       <p>¿No te gusta? ¡Devuélvelo! En Mercado Liebre, no hay nada que no puedas hacer,
         porque estás siempre protegid@.</p>
     </section>
-    <section>
+  </div>
+
+    <section class="copyright">
       <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </section>
   </footer>
+</body>
+
 </body>
 
 </html>
