--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,10 +114,13 @@ main section article{
     margin-bottom: 10px;
 }
 
+
 .renglonPrecioDescuento{
     display: flex;
     border: none;
 }
+
+
 
 p {
     font-size: 12px;
@@ -133,6 +136,15 @@ p {
     font-size: 16px;
     width: 70%;
     margin: auto;
+}
+
+main .descripcion{
+    display: none;
+}
+
+main .fa-truck:hover {
+    transform:rotate(270deg);
+    transition-duration: 2s;
 }
 
 h3 {
@@ -169,6 +181,11 @@ form div button a{
     text-decoration: none;
 }
 
+footer .copyright{
+    font-weight: bold;
+    margin: 15px;
+}
+
 
 @media(max-width: 480px){
     header nav{
@@ -177,9 +194,8 @@ form div button a{
     main .descripcion {
         display: none;
     }
-    header section .logoBusqueda{
-        display: flex;
-    }
+ 
+
 }
 
 @media(min-width: 480px){
@@ -187,10 +203,14 @@ form div button a{
         display: none;
     }
     main section article{
-        box-shadow: 0px 0px 10px rgb(100,100,100);
         width: 45%;
         margin-right: 10px;
     }
+
+    main section article:hover{
+        box-shadow: 0px 0px 10px rgb(100,100,100);
+    } 
+
     .precio {
         font-size: 18px;
         width: 50%;
@@ -201,8 +221,15 @@ form div button a{
         width: 50%;
         margin: auto;
     }
+
+    main .producto:hover .descripcion{
+        display: block;
+    }
+
+
     header section{
         display: flex;
+        flex-wrap: wrap;
     }
     
 }
@@ -213,4 +240,22 @@ form div button a{
         width: 21%;
         margin-right: 10px;
     }
+
+    footer {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+    }
+
+    footer div{
+        display: flex;
+        flex-direction: row;
+    }
+    footer .fas:hover{
+        color: gold;
+    }
+
+
 }
