--- a/views/login.html
+++ b/views/login.html
@@ -13,37 +13,38 @@
 
 <body>
     <header>
-        <section class ="logoBusquedaParrafo">
-            <section class="logoBusqueda">
+        <section class="logoBusquedaParrafo">
+          <section class="logoBusqueda">
             <img id="logo" src="./images/logo-mercado-liebre.svg" alt="">
-            <form action="">
-              <input name="buscar" type="text" placeholder="Busca el producto deseado"><button class="botonBusqueda" type="submit"><i class="fas fa-search-dollar"></i></button> 
+            <form class ="barraBusqueda" action="">
+              <input name="buscar" type="text" placeholder="Busca el producto deseado"><button class="botonBusqueda"
+                type="submit"><i class="fas fa-search-dollar"></i></button>
             </form>
-            </section>
-            <p><i class="fas fa-money-bill"></i>Compra en cuotas y sin tarjeta de crédito</p>
-            </section>
-
-
+          </section>
+          <p class="parrafo"><i class="fas fa-money-bill"></i>Compra en cuotas y sin tarjeta de crédito</p>
+        </section>
+    
+    
         <nav>
-            <ul type="none">
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li>
-            </ul>
-
-            <ul type="none">
-                <li><a href="register">Crea tu cuenta <i class="fas fa-user-circle"></i></a></li>
-                <li><a href="login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis compras <i class="fas fa-shopping-bag"></i></i></a></li>
-            </ul>
+          <ul type="none">
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Tiendas Oficiales</a></li>
+            <li><a href="#">Vender</a></li>
+            <li><a href="#">Ayuda</a></li>
+          </ul>
+    
+          <ul type="none">
+            <li><a href="register">Crea tu cuenta <i class="fas fa-user-circle"></i></a></li>
+            <li><a href="login">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a href="#">Mis compras <i class="fas fa-shopping-bag"></i></i></a></li>
+          </ul>
         </nav>
         <div class="burger-menu">
-            <i class="fas fa-bars"></i>
+          <i class="fas fa-bars"></i>
         </div>
-
-
-    </header>
+    
+    
+      </header>
     <main>
         <form action="" method="">
             <div>
@@ -66,34 +67,39 @@
 
     </main>
     <footer>
+        <div>
         <section>
-            <i class="fas fa-credit-card"></i>
-            <h4>
-                Paga con tarjeta o en efectivo
-            </h4>
-            <p>Con Mercado Liebre Cash, tienes cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
+          <i class="fas fa-credit-card"></i>
+          <h4>
+            Paga con tarjeta o en efectivo
+          </h4>
+          <p>Con Mercado Liebre Cash, tienes cuotas sin interés con tarjeta o efectivo en
+            puntos de pago. ¡Y siempre es seguro!</p>
         </section>
         <section>
-            <i class="fas fa-gift"></i>
-            <h4>
-                Envío gratis desde $ 2.500
-            </h4>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
+          <i class="fas fa-gift"></i>
+          <h4>
+            Envío gratis desde $ 2.500
+          </h4>
+          <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            productos. Es un beneficio de Mercado Puntos.</p>
         </section>
         <section>
-            <i class="fas fa-user-shield"></i>
-            <h4>
-                Seguridad, de principio a fin
-            </h4>
-            <p>¿No te gusta? ¡Devuélvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
+          <i class="fas fa-user-shield"></i>
+          <h4>
+            Seguridad, de principio a fin
+          </h4>
+          <p>¿No te gusta? ¡Devuélvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            porque estás siempre protegid@.</p>
         </section>
-        <section>
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+      </div>
+    
+        <section class="copyright">
+          <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
-    </footer>
+      </footer>
+    </body>
+    
 </body>
 
 </html>
