added background-color to button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,6 +186,9 @@ footer .copyright{
     margin: 15px;
 }
 
+.enviar:hover{
+    background-color: #0022AA;
+}
 
 @media(max-width: 480px){
     header nav{
@@ -256,6 +259,4 @@ footer .copyright{
     footer .fas:hover{
         color: gold;
     }
-
-
 }
