--- a/views/login.html
+++ b/views/login.html
@@ -57,7 +57,7 @@
             </div>
 
             <div>
-                <button type="submit">Acceder</button>
+                <button class="enviar" type="submit">Acceder</button>
             </div>
 
             <div>
